RP2 fix:清理项目
